fixed hint images, messed with spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 body {
     background-color: #DBCB8D;
+    position: relative;
+    padding-bottom: 50px;
+    min-height: 100%;
+    overflow: hidden;
 }
 p {
     font-family: 'Merienda', cursive;
@@ -14,6 +18,7 @@ p {
 }
 html {
     text-align:center;
+    
 }
 
 main {
@@ -28,11 +33,15 @@ main {
 }
 #box {
     float:left;
-    margin-left:80px;
+    margin-left:15px;
+    padding: 10px;
+    width: 250px;
 }
 #box2 {
-    float:right;
-    margin-right:80px;
+    float:left;
+    margin-left:10px;
+    padding:10px;
+    
 }
 footer {
     clear:both;
@@ -42,6 +51,8 @@ footer {
     margin-left: -8px;
     font-family: 'Merienda', cursive;
     color: #000;
+    position: absolute;
+    height: 50px;
 }
 #underline1 {
     visibility: hidden;
@@ -132,4 +143,24 @@ footer {
     font-family: 'Merienda', cursive;
     padding: 8px;
     float:left;
+}
+#button2 {
+    visibility: hidden;
+    font-family: 'Merienda', cursive;
+    background-color: #434343;
+    color: #e2e2e2;
+    text-align: center;
+    padding: 8px;
+    margin-top: 150px;
+    float: right;
+    margin-right: 250px;
+}
+#wordImage {
+    visibility: hidden;
+    width:250px;
+    height:350px;
+    padding: 5px;
+    margin-right: 25px;
+    margin-bottom: auto;
+    margin-top: -33px;
 }
